-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.7.0, Lustre 2.10.5
-
3
-
9223372036854775807
[root@s17 lustre]# mkdir X
[root@s17 lustre]# lfs getstripe X
X
stripe_count: 1 stripe_size: 1048576 stripe_offset: -1
[root@s17 lustre]#
[root@s17 lustre]# lfs setstripe -o 1 X
error on ioctl 0x4008669a for 'X' (3): Invalid argument
error: setstripe: create stripe file 'X' failed